--- a/_config.yml
+++ b/_config.yml
@@ -19,16 +19,13 @@ title: Ctrl Alt Cam # the main title
 tagline: A website by Cameron Clevinger # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  An exercise in technical writing and blog focusing mainly on tech.
+  A blog about software engineering, Linux, 3D printing, and other topics with hands-on guides for tech enthusiasts, developers, or curious makers.
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
 url: "https://ctrlaltcam.com"
 
-github:
-  username: cclevinger23 # change to your GitHub username
-
-twitter:
+gitlab:
   username: cclevinger23 # change to your Twitter username
 
 social:
@@ -39,10 +36,10 @@ social:
   links:
     # The first element serves as the copyright owner's link
     - https://twitter.com/cclevinger23 # change to your Twitter homepage
-    - https://github.com/cclevinger23 # change to your GitHub homepage
+    - https://gitlab.com/cclevinger23 # change to your GitHub homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
-    # - https://www.linkedin.com/in/username
+    - 'https://www.linkedin.com/in/cameron-clevinger614/'
 
 # Site Verification Settings
 webmaster_verifications:
@@ -88,7 +85,7 @@ pageviews:
 #     light — Use the light color scheme
 #     dark — Use the dark color scheme
 #
-theme_mode: dark
+theme_mode:
 
 # The CDN endpoint for media resources.
 # Notice that once it is assigned, the CDN url
@@ -98,7 +95,7 @@ theme_mode: dark
 cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar: "/assets/img/favicons/favicon-96x96.png"
+avatar: "/assets/img/about/a-cam.png"
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
