--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -1,10 +1,12 @@
 #  The contact options.
 
-- type: github
-  icon: "fab fa-github"
+- type: linkedin
+  icon: 'fab fa-linkedin'
+  url:  'https://www.linkedin.com/in/cameron-clevinger614/'
 
-- type: twitter
-  icon: "fa-brands fa-x-twitter"
+- type: gitlab
+  icon: "fab fa-gitlab"
+  url: "https://gitlab.com/cclevinger23"
 
 - type: email
   icon: "fas fa-envelope"
@@ -19,9 +21,6 @@
 #   icon: 'fab fa-mastodon'   # icons powered by <https://fontawesome.com/>
 #   url:  ''                  # Fill with your Mastodon account page, rel="me" will be applied for verification
 #
-# - type: linkedin
-#   icon: 'fab fa-linkedin'   # icons powered by <https://fontawesome.com/>
-#   url:  ''                  # Fill with your Linkedin homepage
 #
 # - type: stack-overflow
 #   icon: 'fab fa-stack-overflow'
