--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ timezone: America/New_York
 
 title: ctrl-alt-cam # the main title
 
-tagline: A blog by Cameron Clevinger # it will display as the subtitle
+tagline: Computing for Humans # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
   A blog about software engineering, Linux, 3D printing, and other topics with hands-on guides for tech enthusiasts, developers, or curious makers.
@@ -32,7 +32,7 @@ social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
   name: Cameron Clevinger
-  email: cameronclevinger@gmail.com # change to your email address
+  email: info@ctrlaltcam.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
     - https://www.linkedin.com/in/cameron-clevinger614/
@@ -180,7 +180,7 @@ defaults:
       toc: true # Display TOC column in posts.
       # DO NOT modify the following parameter unless you are confident enough
       # to update the code of all other post links in this project.
-      permalink: /posts/:title/
+      permalink: /articles/:title/
   - scope:
       path: _drafts
     values:
