--- a/.gitignore
+++ b/.gitignore
@@ -18,8 +18,8 @@ package-lock.json
 # IDE configurations
 .idea
 .vscode/*
-!.vscode/settings.json
-!.vscode/extensions.json
+.vscode/settings.json
+.vscode/extensions.json
 !.vscode/tasks.json
 
 # Misc
