--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,5 +26,18 @@
   // Run tasks in macOS
   "terminal.integrated.profiles.osx": {
     "zsh": { "path": "/bin/zsh", "args": ["-l", "-i"] }
-  }
+  },
+  "cSpell.words": [
+    "compgen",
+    "distro",
+    "distros",
+    "dpkg",
+    "Garuda",
+    "konsole",
+    "LXDE",
+    "pacman",
+    "redistributables",
+    "tcsh",
+    "Yellowdog"
+  ]
 }
